fix: update z-index for google search
Changes to be committed:
modified:   src/sass/App.scss

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -29,7 +29,7 @@ body {
   position: fixed;
   top: 0;
   right: 0;
-  z-index: 9999;
+  z-index: var(--auro-depth-overlay);
   display: none;
 
   @include auro_breakpoint--md {
